@@ -6,5 +6,5 @@ RUN mvn clean package
 
 FROM adoptopenjdk/openjdk11:x86_64-alpine-jre-11.0.6_10
 COPY --from=0 /tmp/target/WordsFromWordBruteForce-0.0.1-SNAPSHOT-spring-boot.jar /app.jar
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-Xms70m", "-Xmx70m", "-XX:MaxPermSize=25m", "-jar", "app.jar"]
 EXPOSE 8080
